v1.1.0
- Modified cheese exploit to give adb root
- Improved the program to make it one click and exploiting once
- Enabling magisk now happens over local adb